--- a/.github/workflows/github-actions-demo.yaml
+++ b/.github/workflows/github-actions-demo.yaml
@@ -2,7 +2,7 @@ name: Github Actions Demo
 on: push
 jobs:
   Explore-Github-Actions
-    runs on: windows-latest
+    runs on: ubuntu-latest
     steps:
       - name: Print the triggering event
 	run: echo "The job was triggered by ${{ github.event_name }}."	
