--- a/.github/workflows/github-actions-demo.yaml
+++ b/.github/workflows/github-actions-demo.yaml
@@ -1,8 +1,8 @@
 name: Github Actions Demo
 on: push
 jobs:
-  Explore-Github-Actions
-    runs on: ubuntu-latest
+  Explore-Github-Actions:
+    runs-on: ubuntu-latest
     steps:
       - name: Print the triggering event
 	run: echo "The job was triggered by ${{ github.event_name }}."	
