--- a/.github/workflows/github-actions-demo.yaml
+++ b/.github/workflows/github-actions-demo.yaml
@@ -1,12 +1,12 @@
-name: Github Actions Demo
+name: GitHub Actions Demo
 on: push
 jobs:
-  Explore-Github-Actions:
+  Explore-GitHub-Actions:
     runs-on: ubuntu-latest
     steps:
       - name: Print the triggering event
-	run: echo "The job was triggered by ${{ github.event_name }}."	
+        run: echo "The job was triggered by ${{ github.event_name }}."
       - name: Print the OS of the runner
-	run: echo "The job is running on a ${{ runner.os }} server "	
+        run: echo " This job is running on a ${{ runner.os }} server "
 
 
